2005-11-12  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Preliminary Unicode support has been added for
	  domain names.  Running dns.name.from_text() on a Unicode string
	  will now encode each label using the IDN ACE encoding.  The
	  to_unicode() method may be used to convert a dns.name.Name with
	  IDN ACE labels back into a Unicode string.  This functionality
	  requires Python 2.3 or greater.

2005-10-31  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.5 released)

2005-10-12  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Zone.iterate_rdatasets() and Zone.iterate_rdatas()
	  did not have a default rdtype of dns.rdatatype.ANY as their
	  docstrings said they did.  They do now.

2005-10-06  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Added the parent() method, which returns the
	  parent of a name.

2005-10-01  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Added zone_for_name() helper, which returns
	  the name of the zone which contains the specified name.

	* dns/resolver.py: Added get_default_resolver(), which returns
	  the default resolver, initializing it if necessary.

2005-09-29  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver._compute_timeout): If time goes
	  backwards a little bit, ignore it.

2005-07-31  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.4 released)

2005-07-31  Bob Halley  <halley@dnspython.org>

	* dns/message.py (make_response): Trying to respond to a response
	  threw a NameError while trying to throw a FormErr since it used
	  the wrong name for the FormErr exception.

	* dns/query.py (_connect): We needed to ignore EALREADY too.

	* dns/query.py: Optional "source" and "source_port" parameters
	  have been added to udp(), tcp(), and xfr().  Thanks to Ralf
	  Weber for suggesting the change and providing a patch.

2005-06-05  Bob Halley  <halley@dnspython.org>

	* dns/query.py: The requirement that the "where" parameter be
	  an IPv4 or IPv6 address is now documented.
